--- a/CSS/CSSGENERAL.css
+++ b/CSS/CSSGENERAL.css
@@ -46,29 +46,36 @@ nav ul li a:hover {
 }
 
 /*  PARTEA CU DROPDOWN */ 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  background-color: #525151;
+  align-self: center;
+  width: 50%;
+  overflow: auto;
+  z-index:1 !important;
 }
 
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+  display: inline-block;
 }
-.dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown-content a:hover {
+    background-color: white;
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
+
 /* ---------------- */
+
 main img {
     position: relative;
     align-content: center;
