--- a/CSS/CSSGENERAL.css
+++ b/CSS/CSSGENERAL.css
@@ -1,12 +1,16 @@
 body {
   background-image: url('../IMG/background.jpg');
 }
-
 nav {
     position: relative;
     width: 100%;
     margin: 0;
+    z-index: 10;
     background-color: #525151; 
+}
+
+nav * {
+    padding:0;
 }
 
 nav img{
@@ -32,6 +36,7 @@ nav ul li {
 nav ul li a, div {
   color:black;
   text-decoration: underline;
+    box-sizing: border-box;
   padding: 1em;
   background: #525151;
   transition: background 1s linear;
