--- a/CSS/CSSGENERAL.css
+++ b/CSS/CSSGENERAL.css
@@ -1,36 +1,42 @@
 body {
   background-image: url('../IMG/background.jpg');
 }
+
 nav {
     position: relative;
     width: 100%;
     margin: 0;
     z-index: 10;
-    background-color: #525151; 
 }
 
 nav * {
     padding:0;
+    margin: 0;
 }
 
 nav img{
-    position: relative;
     float: left;
     width: 2.7em;
     height: 2.7em;
-    border-radius: 50%;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-top: 0.3em;
+    margin-right: 0.3em;
+    margin-bottom: 0.3em;
+    margin-left: 0.3em;
+    border-radius: 1em;
 }
 
 nav ul li {
-  position: relative;
   float: right;
   list-style-type: none;
   text-decoration: none;
   display: inline-block;
+  border-radius: 0.75em;
+  margin-bottom: 0.15em;
+  margin-right: 0.2em;
+}
+
+nav ul li ul{
+    left:0.2em;
 }
 
 nav ul li a, nav ul li div {
@@ -40,12 +46,14 @@ nav ul li a, nav ul li div {
   padding: 1em;
   background: #525151;
   transition: background 1s linear;
+  border-radius: 0.75em;
 }
 
 nav ul li a:hover, nav ul li div:hover {
   background: #282828;
   color: lightslategray;
   transition: background 1s linear;
+  border-radius: 0.75em;
 }
 
 /*  PARTEA CU DROPDOWN */ 
@@ -59,7 +67,8 @@ ul.menu>li,ul.menu>li>ul.submenu>li{
 
 ul.menu>li{
 	 float:right;
-     height: 50px;
+     height: 54px;
+     width: 10em;
 }
 ul.submenu>li{
 	 width:100%;
@@ -99,9 +108,7 @@ main section {
     color:lightgrey;
     margin-left: auto;
     margin-right: auto;
-    width: 65em;
-    /*margin-left: 20%;
-    margin-right: 20%;*/
+    width: 70%;
 }
 
 main section article h2 {
@@ -117,7 +124,7 @@ footer {
     color: darkgray;
 }
 
-footer a,u,ul{
+footer a, footer u, footer ul{
     margin-left:7%;
     margin-right:5%;
 }
