--- a/CSS/CSSGENERAL.css
+++ b/CSS/CSSGENERAL.css
@@ -25,18 +25,14 @@ nav img{
     border-radius: 1em;
 }
 
-nav ul li {
+nav>ul>li {
   float: right;
   list-style-type: none;
   text-decoration: none;
   display: inline-block;
   border-radius: 0.75em;
+  margin-right: 0.2em;  
   margin-bottom: 0.15em;
-  margin-right: 0.2em;
-}
-
-nav ul li ul{
-    left:0.2em;
 }
 
 nav ul li a, nav ul li div {
@@ -87,11 +83,11 @@ ul.menu>li>ul.submenu{
 
 ul.menu>li>ul.submenu>li
 	{
-		border-top:1px solid black;
+		border-top:0.01em dotted grey;
 	}
 ul.menu>li>ul.submenu>li:last-child
 	{
-		border-bottom:1px solid black;
+		border-bottom:0.01em dotted grey;
 	}
 ul.menu>li:hover{
 		overflow:inherit;
