--- a/CSS/CineSuntEu.css
+++ b/CSS/CineSuntEu.css
@@ -5,14 +5,141 @@ main table{
     text-indent: 4em;
     position: relative;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
-main table caption,thead,tr{
+main table caption,main table thead{
     padding: 1em;
+}
+main table caption {
+    text-decoration: underline;
 }
 main ul a {
     color:lightgray;
     text-decoration: underline;
 }
 #Contact p{
-    text-indent: 5em;
+    text-indent: 1em;
 }
+
+main section.grid-container h2 {
+    display: inline;
+}
+
+main h2 {
+    color:lightgrey;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+
+section.grid-container{
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-gap: 2.5% 2.5% 2.5% 2.5%;
+    flex-basis: 60%;
+}
+section.grid-container>h2{
+    padding-top: 3%;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+section.grid-container>p:nth-of-type(1){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+section.grid-container>p:nth-of-type(2){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 3;
+    grid-row-end: 3;
+}
+section.grid-container>p:nth-of-type(3){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 4;
+    grid-row-end: 4;
+}
+section.grid-container>p:nth-of-type(4){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 5;
+    grid-row-end: 5;
+}
+section.grid-container>img{
+    align-self: center;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 6;
+    width: 100%;
+}
+
+@media screen and (min-width:1070px) and (max-width:1300px){
+    main section{
+        width: 90%;
+    }
+    main>section.grid-container>p {
+        font-size:100px;
+    }
+}
+
+@media screen and (min-width:650px) and (max-width:1070px){
+    main section{
+        width: 90%;
+    }
+    section.grid-container {
+        display: block;
+    }
+    section.grid-container{
+        padding-top: 2%;
+    }
+    section.grid-container>h2{
+        padding-left: 10%;
+    }
+    section.grid-container>img{
+        width: 50%;
+        height: 50%;
+        padding-left: 25%;
+    }
+    
+    main section.Tabel .tabel{
+        text-indent: 1em !important;
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width:650px){
+    main section{
+        width: 90%;
+        font-size: 0.9em;
+    }
+    section.grid-container {
+        display: block;
+    }
+    section.grid-container{
+        padding-top: 2%;
+    }
+    section.grid-container>h2{
+        padding-left: 10%;
+    }
+    section.grid-container>img{
+        width: 50%;
+        height: 50%;
+        padding-left: 25%;
+    }
+    
+    main section.Tabel .tabel{
+        text-align: left !important;
+        text-indent: 1em !important;
+        font-size: 1em;
+    }
+    main section.Tabel .tabel{
+            text-indent: 0.8em !important;
+            font-size: 0.8em;
+        }
+    }
