--- a/CSS/CineSuntEu.css
+++ b/CSS/CineSuntEu.css
@@ -1,7 +1,9 @@
 main table{
+    box-sizing: border-box;
+    box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
+    border-radius: 0.75em;
     color: lightgrey;
     border-color: azure;
-    padding-bottom: 3em;
     text-indent: 4em;
     position: relative;
     text-align: center;
@@ -33,11 +35,19 @@ main h2 {
     width: 70%;
 }
 
-section.grid-container{
+main div#Scurtaprezentare{
+  padding-top: 1em ;
+}
+
+section.grid-container{  
+  box-sizing: border-box;
+  box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
+  border-radius: 0.75em;
+  padding: 3px;
   display: grid;
   grid-template-columns: 70% 30%;
   grid-gap: 2.5% 2.5% 2.5% 2.5%;
-    flex-basis: 60%;
+  flex-basis: 60%;
 }
 section.grid-container>h2{
     padding-top: 3%;
