--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,5 +1,15 @@
-main section article h2 {
-    margin-left:2em;
+main section {
+    box-sizing: border-box;
+    box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
+    border-radius: 0.75em;
+    padding: 1px;
+}
+main #Scop{
+    padding-top: 1em;
+}
+
+main section h2 {
+    margin-left:1em;
 }
 
 main p {
@@ -12,7 +22,11 @@ main p {
         width: 80%;
     }
     main section h2 {
-        text-indent: 1.2em;
+        text-indent: 1.5em;
+        font-size: 0.9em;
+    }
+    main section p{
+        font-size: 0.9em;
     }
 }
 
@@ -22,9 +36,9 @@ main p {
     }
     main section h2 {
         text-indent: 1.2em;
-        font-size: 0.9em;
+        font-size: 0.95em;
     }
     main section p{
-        font-size: 0.9em;
+        font-size: 0.8em;
     }
 }
