--- a/CSS/CSSGENERAL.css
+++ b/CSS/CSSGENERAL.css
@@ -179,7 +179,7 @@ main a {
         font-size: 0.8em;
     }
     ul.menu>li{
-        height:3.7em;
+        height:3.4em;
     }
 }
 
@@ -192,9 +192,18 @@ main a {
     }
 }
 
-@media screen and (max-width:550px){
+@media screen and (min-width:370px) and (max-width:550px){
     nav {
-        font-size: 0.40em;
+        font-size: 0.4em;
+    }
+    ul.menu>li{
+        height:3.4em;
+    }
+}
+
+@media screen and (max-width:370px){
+    nav {
+        font-size: 0.3em;
     }
     ul.menu>li{
         height:3.4em;
