--- a/CSS/CineSuntEu.css
+++ b/CSS/CineSuntEu.css
@@ -1,30 +1,34 @@
-main table{
-    box-sizing: border-box;
-    box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
-    border-radius: 0.75em;
+main section article.Tabel .tabel{
     color: lightgrey;
-    border-color: azure;
-    text-indent: 4em;
+    text-indent: 3em;
     position: relative;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
-main table caption,main table thead{
+
+main section article.Tabel>p{
+    text-align: left !important;
+}
+
+main section article table caption,main table thead{
     padding: 1em;
 }
+
 main table caption {
     text-decoration: underline;
 }
+
 main ul a {
     color:lightgray;
     text-decoration: underline;
 }
+
 #Contact p{
     text-indent: 1em;
 }
 
-main section.grid-container h2 {
+main section article article.grid-container h2 {
     display: inline;
 }
 
@@ -35,11 +39,10 @@ main h2 {
     width: 70%;
 }
 
-main div#Scurtaprezentare{
+main section#Scurtaprezentare{
   padding-top: 1em ;
 }
-
-section.grid-container{  
+section article.grid-container{  
   box-sizing: border-box;
   box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
   border-radius: 0.75em;
@@ -49,38 +52,38 @@ section.grid-container{
   grid-gap: 2.5% 2.5% 2.5% 2.5%;
   flex-basis: 60%;
 }
-section.grid-container>h2{
+section article.grid-container>h2{
     padding-top: 3%;
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
     grid-row-end: 1;
 }
-section.grid-container>p:nth-of-type(1){
+section article.grid-container>p:nth-of-type(1){
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 2;
     grid-row-end: 2;
 }
-section.grid-container>p:nth-of-type(2){
+section article.grid-container>p:nth-of-type(2){
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 3;
     grid-row-end: 3;
 }
-section.grid-container>p:nth-of-type(3){
+section article.grid-container>p:nth-of-type(3){
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 4;
     grid-row-end: 4;
 }
-section.grid-container>p:nth-of-type(4){
+section article.grid-container>p:nth-of-type(4){
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 5;
     grid-row-end: 5;
 }
-section.grid-container>img{
+section article.grid-container>img{
     align-self: center;
     grid-column-start: 2;
     grid-column-end: 2;
@@ -89,99 +92,92 @@ section.grid-container>img{
     width: 100%;
 }
 
-@media screen and (min-width:1070px) and (max-width:1300px){
-    main section{
+@media screen and (min-width:1130px) and (max-width:1300px){
+    main section article{
         width: 90%;
-    }
-    main>section.grid-container>p {
-        font-size:100px;
     }
 }
 
-@media screen and (min-width:650px) and (max-width:1070px){
-    main section{
+@media screen and (min-width:650px) and (max-width:1130px){
+    main section article{
         width: 90%;
     }
-    section.grid-container {
+    section article.grid-container {
         display: block;
     }
-    section.grid-container{
+    section article.grid-container{
         padding-top: 2%;
     }
-    section.grid-container>h2{
+    section article.grid-container>h2{
         padding-left: 10%;
     }
-    section.grid-container>img{
+    section article.grid-container>img{
         width: 50%;
         height: 50%;
         padding-left: 25%;
     }
     
-    main section.Tabel .tabel{
+    main section article.Tabel .tabel{
         text-indent: 1em !important;
         font-size: 1em;
+        position: relative;
+        text-align: center;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 }
 
-@media screen and (min-width:550px) and (max-width:650px){
-    main section{
+@media screen and (min-width:550px) and (max-width:750px){
+    main section article{
         width: 90%;
         font-size: 0.9em;
     }
-    section.grid-container {
+      section article.grid-container {
         display: block;
     }
-    section.grid-container{
+      section article.grid-container{
         padding-top: 2%;
     }
-    section.grid-container>h2{
+      section article.grid-container>h2{
         padding-left: 10%;
     }
-    section.grid-container>img{
+      section article.grid-container>img{
         width: 50%;
         height: 50%;
         padding-left: 25%;
     }
     
-    main section.Tabel .tabel{
+    main section article.Tabel .tabel{
         text-align: left !important;
-        text-indent: 1em !important;
-        font-size: 1em;
-    }
-    main section.Tabel .tabel{
-            text-indent: 0.8em !important;
-            font-size: 0.8em;
+        text-indent: 0.8em !important;
+        font-size: 0.8em;
     }
 }
 
 @media screen and (max-width:550px){
-    main section{
-        width: 90%;
-        font-size: 0.9em;
+    main section article {
+        width: 95%;
+        font-size: 0.7em;
     }
-    section.grid-container {
+      section article.grid-container {
         display: block;
     }
-    section.grid-container{
+      section article.grid-container{
         padding-top: 2%;
     }
-    section.grid-container>h2{
+      section article.grid-container>h2{
         padding-left: 10%;
     }
-    section.grid-container>img{
+      section article.grid-container>img{
         width: 50%;
         height: 50%;
         padding-left: 25%;
     }
     
-    main section.Tabel .tabel{
+    main section article.Tabel .tabel{
         text-align: left !important;
-        text-indent: 1em !important;
-        font-size: 1em;
-    }
-    main section.Tabel .tabel{
-            text-indent: 0.55em !important;
-            font-size: 0.55em;
+        text-indent: 0.55em !important;
+        font-size: 0.55em;
         }
     }
-}
