--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,44 +1,51 @@
-main section {
+main section article {
     box-sizing: border-box;
     box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
     border-radius: 0.75em;
     padding: 1px;
 }
-main #Scop{
+main section#Scop{
     padding-top: 1em;
 }
 
-main section h2 {
+main section article h2 {
     margin-left:1em;
 }
 
-main p {
+main section>h2{
+    text-align: center;
+    width:70%;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+main section article p {
     font-size:1em;
     text-indent: 4em;
 }
 
 @media screen and (min-width:600px) and (max-width:1000px){
-    main section {
+    main section  article {
         width: 80%;
     }
-    main section h2 {
+    main section  article h2 {
         text-indent: 1.5em;
         font-size: 0.9em;
     }
-    main section p{
+    main section article p{
         font-size: 0.9em;
     }
 }
 
 @media screen and (max-width:600px){
-    main section {
+    main section article {
         width: 80%;
     }
-    main section h2 {
-        text-indent: 1.2em;
-        font-size: 0.95em;
+    main section article h2 {
+        text-indent: 0.2em;
+        font-size: 0.8em;
     }
-    main section p{
+    main section article p{
         font-size: 0.8em;
     }
 }
