--- a/CSS/AntranementeSlabire.css
+++ b/CSS/AntranementeSlabire.css
@@ -179,8 +179,8 @@ main section#Ant article#Greu p:nth-of-type(5) {
 }
 
 @media screen and (min-width:700px) and (max-width:1150px){
-    main section#GeneralFacts, main section#Ant{
-        width:90%;
+    main section article{
+        width:90% !important;
     }
     main section#GeneralFacts article#Def img {
         width:80%;
@@ -211,8 +211,8 @@ main section#Ant article#Greu p:nth-of-type(5) {
     }
 }
 @media screen and (max-width:700px){
-    main section#GeneralFacts, main section#Ant{
-        width:95%;
+    main section article {
+        width:97% !important;
         font-size: 0.8em;
     }
     main section#GeneralFacts article#Def img {
