--- a/CSS/AntrenamenteGal.css
+++ b/CSS/AntrenamenteGal.css
@@ -1,3 +1,10 @@
+main article {
+    margin-top: 1em;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
+    border-radius: 0.75em;
+    padding: 3px;
+}
 
 main section#Galerie article img {
     width:250px!important;
@@ -28,23 +35,11 @@ main section#Galerie article img:nth-of-type(1){
     grid-row-start: 2;
     grid-row-end: 2;
 }
-main selection#Galerie article p:nth-of-type(1){
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 3;
-    grid-row-end: 3;
-}
 main section#Galerie article img:nth-of-type(2){
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 2;
-}
-main selection#Galerie article p:nth-of-type(2) {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 3;
-    grid-row-end: 3;
 }
 main section#Galerie article img:nth-of-type(3){
     grid-column-start: 3;
@@ -52,20 +47,14 @@ main section#Galerie article img:nth-of-type(3){
     grid-row-start: 2;
     grid-row-end: 2;
 }
-main selection#Galerie article p:nth-of-type(3) {
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 3;
-}
 
-@media screen and (min-width:810px) and (max-width:1120px){
+@media screen and (min-width:870px) and (max-width:1120px){
     main section article {
         width: 98%;
     }
 }
 
-@media screen and (min-width:600px) and (max-width:810px) {
+@media screen and (min-width:600px) and (max-width:870px) {
     main section article {
         width: 98%;
     }
@@ -83,11 +72,14 @@ main selection#Galerie article p:nth-of-type(3) {
         width: 98%;
     }
     main section#Galerie article h2 {
-        font-size: 1.1em;
+        font-size: 1.03em;
+    }
+    main section#Galerie article p {
+        font-size: 0.5em;
     }
     main section#Galerie article img {
         width:90px!important;
-        height:130px!important;
+        height:110px!important;
         margin-left: auto;
         margin-right: auto;
         width: 80%!important;
