--- a/CSS/Diets.css
+++ b/CSS/Diets.css
@@ -1,76 +1,185 @@
-body {
-  background-image: url('../background.jpg');
+main article {
+    margin-top: 1em;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 5px 5px rgba(176,176,176,0.44);
+    border-radius: 0.75em;
+    padding: 3px;
 }
 
-nav {
-    display: inline-block;
-    width: 100%;
-    vertical-align:top;
-    overflow: hidden;
-    background-color: #525151; 
+main section article h2{
+    padding-left: 1em;
 }
 
-nav img{
-    position: relative;
-    float: left;
-    width: 2.7em;
-    height: 2.7em;
-    border-radius: 50%;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+main section#Diete>h2{
+    text-align: center;
 }
 
-nav ul li {
-  position: relative;
-  float: right;
-  list-style-type: none;
-  text-decoration: none;
-  display: inline;
+main section#GeneralFacts article#CeRol{
+    display: grid;
+    grid-template-columns: 65% 35%;
+    grid-column-gap: 1em;
+    padding: 1em;
+}
+main section#GeneralFacts article#CeRol h2{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end:1;
+}
+main section#GeneralFacts article#CeRol p:nth-of-type(1){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 2;
+    grid-row-end:2;
+}
+main section#GeneralFacts article#CeRol p:nth-of-type(2){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 3;
+    grid-row-end:3;
+}
+main section#GeneralFacts article#CeRol p:nth-of-type(3){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 4;
+    grid-row-end:4;
+}
+main section#GeneralFacts article#CeRol img{
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 5;
+    margin-top: auto;
+    margin-bottom: auto;
+    height:90%;
 }
 
-nav ul li a {
-  color:black;
-  padding: 1em;
+main section#Diete article#Slăbit{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-column-gap: 1em;
+    padding: 1em;
+}
+main section#Diete article#Slăbit h2{
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+main section#Diete article#Slăbit p:nth-of-type(1){
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+main section#Diete article#Slăbit p:nth-of-type(2){
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 3;
+}
+main section#Diete article#Slăbit p:nth-of-type(3){
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 4;
+}
+main section#Diete article#Slăbit p:nth-of-type(4){
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 5;
+    grid-row-end: 5;
+}
+main section#Diete article#Slăbit img{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 7;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 90%;
 }
 
-nav ul li a:hover {
-  background-color: grey;
+main section#Diete article#Muschi{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-column-gap: 1em;
+    padding: 1em;
+}
+main section#Diete article#Muschi h2{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+main section#Diete article#Muschi p:nth-of-type(1){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+main section#Diete article#Muschi p:nth-of-type(2){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 3;
+    grid-row-end: 3;
+}
+main section#Diete article#Muschi p:nth-of-type(3){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 4;
+    grid-row-end: 4;
+}
+main section#Diete article#Muschi p:nth-of-type(4){
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 5;
+    grid-row-end: 5;
+}
+main section#Diete article#Muschi img{
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 7;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 90%;
 }
 
-main img {
-    align-content: center;
-    width:100%;
+@media screen and (min-width:700px) and (max-width:1100px){
+    main section article {
+        width: 98%;
+    }
 }
 
-main section {
-    color:lightgrey;
-    margin-left: auto;
-    margin-right: auto;
-    width: 65em;
-    /*margin-left: 20%;
-    margin-right: 20%;*/
+@media screen and (min-width:400px) and (max-width:700px){
+    main section article {
+        width: 98%;
+        display: block!important;
+    }
+    main section article p{
+        font-size: 0.9em;
+    }
+    main section img{
+        margin-left:20%;
+        width:60%;
+    }
 }
 
-footer {
-    margin-top: 3%;
-    color: darkgray;
-}
-
-footer a,u,ul{
-    margin-left:7%;
-    margin-right:5%;
-}
-
-footer a {
-    color:gainsboro;
-}
-
-footer hr {
-    width: 90%;
-}
-footer ul li a{
-    text-decoration: none;
-    margin-left:0%;
+@media screen and (max-width:400px){
+    main section article {
+        width: 98%;
+        display: block!important;
+    }
+    main section article p{
+        font-size: 0.9em;
+    }
+    main section article h2{
+        font-size: 1.2em;
+        padding-left: 0;
+    }
+    main section img{
+        margin-left:10%;
+        width:80%;
+    }
 }
