--- a/CSS/AntrenamenteGal.css
+++ b/CSS/AntrenamenteGal.css
@@ -15,6 +15,10 @@ main section#Galerie article img {
     margin-right: 10% ;
     width:80%;
 }
+main section#Galerie article img:hover{
+    box-sizing: border-box;
+    box-shadow: 0px 0px 0px 2px rgba(133,133,133,1);
+}
 
 main section#Galerie article {
     display: grid;
